    documentation)
  - rk.JS.scan() omitted <formula> nodes
  - re-implemented the dropping of variables if they're globally defined in
    rk.JS.doc()
changed:
  - internal function get.IDs() now uses new internal function
    filter.relevant.tags()
  - function rk.JS.scan() now has a new mode switch and supports scanning for
    <preview /> nodes
  - handling of previews was changed; using "doPrintout" is deprecated now,
    but still works. most scripts should still do without changes, allthough
    the JS code lokks different now
  - improved output of rk.JS.doc()
  - improved the handling of <frame> nodes in JS code: previously id() just
    returned the camelCode id of frames, you had to manually define an object
    outside rk.paste.JS() via rk.JS.vars(<frame object>, modifiers="checked").
    the default is now to add the checked modifier, since using frames in JS
    is most likely useless otherwise. i.e., you now need to manually call via
    rk.JS.vars(<frame object>) with no modifiers if you happen to need the
    frame's ID for whatever reason
  - adjusted plugin2script() to the new rk.XML.preview() parameters (see
    "added")
  - rk.XML.embed() now also accepts objects of class rk.plug.comp as
    components
  - rk.XML.connect() now allows objects of class rk.plug.comp to be used as clients
    and <external> nodes to be used as the "set" modifier for that client, and can
    therefore be used to connect properties from embedded plugins
  - objects of class rk.JS.var now have a new slot "methods" to append method calls
added:
  - new parameters "mode", "placement", "active" and "id.name" in
    rk.XML.preview()
  - new parameter "preview" in rk.JS.doc() to force adding a preview()
    function
  - rk.plugin.component() and rk.plugin.skeleton() now support "preview" in
    both the "js" option and the "scan" option
  - new options "preview" and "level" in rk.JS.saveobj()
  - id() gained the new attribute "guess.modifier" to toggle the new default