@@ -42,6 +42,8 @@
 #'        An according \code{preview()} function will be added to the JS code if needed. Will be overwritten by a
 #'        preview function that was defined by the \code{js} option.}
 #'    }
+#' @param unused.vars Logical, if \code{TRUE} all variables found by \code{scan} are being defined, even if they are not used in the
+#'    JavaScript code. By default only matching variables will be kept. This option should only be used for debugging.
 #' @param guess.getter Logical, if \code{TRUE} try to get a good default getter function for JavaScript
 #'    variable values (if \code{scan} is active). This will use some functions which were added with RKWard 0.6.1, and therefore
 #'    raise the dependencies for your plugin/component accordingly. Nonetheless, it's recommended.
@@ -166,7 +168,7 @@
 
 rk.plugin.skeleton <- function(about, path=tempdir(),
   provides=c("logic", "dialog"),
-  scan=c("var", "saveobj", "settings", "preview"), guess.getter=FALSE,
+  scan=c("var", "saveobj", "settings", "preview"), unused.vars=FALSE, guess.getter=FALSE,
   xml=list(), js=list(), pluginmap=list(), rkh=list(),
   overwrite=FALSE, tests=TRUE, lazyLoad=TRUE,
   create=c("pmap", "xml", "js", "rkh", "desc", "clog"), suggest.required=TRUE,
@@ -262,6 +264,7 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
     rkh=rkh,
     provides=provides,
     scan=scan,
+    unused.vars=unused.vars,
     guess.getter=guess.getter,
     hierarchy=pluginmap[["hierarchy"]],
     create=create[create %in% c("xml", "js", "rkh")],
